src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

body {
  font-family: 'Inter', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 700;
}
article header h1 {
  font-size: 2rem !important;
}
h1 {
  font-size: 1.7rem;
}
h2 {
  font-size: 1.3rem;
}
h3 {
  font-size: 1.1rem;
  margin-bottom: 0.5rem !important;
}
h4 {
  font-size: 1rem;
  margin-bottom: 0.5rem !important;
}
h5 {
  font-size: 1rem;
}
a {
  font-weight: 500;
}

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #0068b3;
  --ifm-color-primary-dark: #005693;
  --ifm-color-primary-darker: #0069b3;
  --ifm-color-primary-darkest: #006fbd;
  --ifm-color-primary-light: #0087e7;
  --ifm-color-primary-lighter: #008df1;
  --ifm-color-primary-lightest: #129dff;
  --ifm-link-color: #0068b3;
  --ifm-code-font-size: 95%;
  --ifm-font-family-base: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Helvetica Neue", "Ubuntu", sans-serif;
  --ifm-font-size-base: 0.95em;
  
  --ifm-menu-color: #000;
  --ifm-menu-color-active: #1B63D2;
  --ifm-menu-color-background-active: #0068b311;
  --ifm-navbar-background-color: #FFFFFF;
  --ifm-menu-link-padding-vertical: 0.4rem;

  --ifm-transition-fast: 100ms;  
}

html[data-theme="dark"] {
  --ifm-color-primary: #2196f3;
  --ifm-color-primary-dark: #007bd2;
  /* any other colors you wish to overwrite */

  --ifm-link-color: #1B63D2;
  --ifm-menu-color: #ccc;
  --ifm-menu-color-active: #fff;
  --ifm-menu-color-background-active: #194b7d99;

  --ifm-navbar-background-color: #242526;
}

.docusaurus-highlight-code-line {
  background-color: #000;
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.footer__copyright {
  color: #999;
  margin-top: 4em;
  font-size: small;
}

.footer {
  padding-bottom: 1em;
}

.footer--dark {
  --ifm-footer-background-color: #1b2528;
}

.menu {
  text-transform: none;
  font-size: 14px;
}

.alert {
  margin-left: 20px;
}

.alert--info {
  --ifm-alert-background-color: #2196f333;
  --ifm-alert-border-color: #2196f3;
  --ifm-alert-color: #2196f3;
  --ra-admonition-icon-color: #2196f3;
}

.alert--warning {
  --ifm-alert-background-color: #ff980033;
  --ifm-alert-border-color: #ff9800;
  --ifm-alert-color: #ff9800;
  --ra-admonition-icon-color: #ff9800;
}

.alert--danger {
  --ifm-alert-background-color: #f4433633;
  --ifm-alert-border-color: #f44336;
  --ifm-alert-color: #f44336;
  --ra-admonition-icon-color: #f44336;
}

.img-center {
  display: flex;
  justify-content: center;
  width: 100%,
}

.katex{
  font-size: 80%;
}

.katex .base {
  vertical-align: 0em;  /* Adjust this value as needed */
}

.menu__link {
  font-size: 0.9rem;
}

.menu__caret:before,
.menu__link--sublist-caret:before,
.menu__link--sublist-caret:after {
  background-size: 1.2rem 1.2rem;
  filter: drop-shadow(0 0 0 #000);
}

.math-inline {
  line-height: 1;
}

.prism-code {
  border: 1px solid #ddd;
  font-size: 0.85rem;
}

.sdk-toc-header {
  background-color: blue;
  color: red;
}

span.math.math-inline {
  font-size: 150%;
}

.CTA{
  font-weight: 600;
  border-radius: 5px;
  text-transform: none;
  white-space: nowrap;
  font-size: 14px;
  padding: 6px 16px;
  min-height: 34px;
  cursor: pointer;
  border: 0px;
  display: inline-flex;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

.signupCTA{
  background-color:#1B63D2;
  color: rgb(255, 255, 255);
}

.loginCTA{
  background-color: transparent;
  color: #1B63D2;;
}

[data-theme="dark"] .loginCTA{
  color: #fff;
}

.navbar__items>div:has(.DocSearch){
  margin-left:  auto;
  margin-right: 40px;
}

.DocSearch-Button-Key{
  background: white !important;
  box-shadow: none !important;
}

.DocSearch-Button{
  min-width: 350px;;
}

.DocSearch-Button-Placeholder{
  font-family: "Open Sans", sans-serif;
}

.col {
  padding: 0px 16px;
}

@media (min-width: 768px) {
  .col {
    padding: 0px 60px;
  }
}

.warning {
  margin-bottom: 16px;
}

.theme-doc-sidebar-item-category-level-1 > .menu__list-item-collapsible{
  /* border-bottom: 1px solid #e0e0e0;  */
  border-top: 1px solid #e0e0e0; 
  /* padding-bottom: 5px; */
  margin-top: 15px;
  padding-top: 15px;
}

.theme-doc-sidebar-item-category-level-1 > .menu__list-item-collapsible > .menu__link{
  color: gray;
  font-size: 12px;
  font-family: 'Open Sans', sans-serif;
  margin-left: 8px;
}

.menu__list > .menu__list-item:first-child .menu__list-item-collapsible {
  border-top: none; /* Remove border-top for the first element */
  padding-top: 0; /* Adjust padding if necessary */
}

.menu__link{
  font-weight: 600;
  margin-left: 25px;
}

.navbar__logo{
  height:25px;
  margin-left:5px;
}

.sidebar-icon {
  align-items: center;
  position: relative;
}

.sidebar-icon::before {
  content: '';
  position: absolute;
  width: 16px;
  height: 16px;
  margin-right: 8px;
  margin-left: 8px;
  background-size: contain;
  background-repeat: no-repeat;
  margin: var(--ifm-menu-link-padding-vertical) var(--ifm-menu-link-padding-horizontal);
}

/* 
[data-theme="dark"] .menu__link--sublist-caret::after, .sidebar-icon::before .menu__caret:before {
  filter: var(--ifm-menu-link-sublist-icon-filter);
} */

.sidebar-icon:has(> .menu__link--active){
  background-color: var(--ifm-menu-color-background-active)
}
.menu__caret:before{
  filter: var(--ifm-menu-link-sublist-icon-filter);
}

.menu__link--active:not(.menu__link--sublist) {
  background-color: unset;
}

.rocket-icon::before{
  background-image: url('/img/icons/sidebar/rocket.svg');
}

.doc-icon::before{
  background-image: url('/img/icons/sidebar/doc.svg');
}

.key-icon::before{
  background-image: url('/img/icons/sidebar/key.svg');
}

.integrations-icon::before{
  background-image: url('/img/icons/sidebar/integrations.svg');
}

.xp-icon::before{
  background-image: url('/img/icons/sidebar/xp.svg');
}

.feature-icon::before{
  background-image: url('/img/icons/sidebar/feature.svg');
}

.chart-icon::before{
  background-image: url('/img/icons/sidebar/chart.svg');
}

.play-icon::before{
  background-image: url('/img/icons/sidebar/play.svg');
}

.web-icon::before{
  background-image: url('/img/icons/sidebar/web.svg');
}

.data-icon::before{
  background-image: url('/img/icons/sidebar/data.svg');
}

.help-icon::before{
  background-image: url('/img/icons/sidebar/help.svg');
}


.question-icon::before{
  background-image: url('/img/icons/sidebar/help.svg');
}

.lightbulb-icon::before{
  background-image: url('/img/icons/sidebar/concept.svg');
}

.ai-icon::before{
  background-image: url('/img/icons/sidebar/ai.svg');
}

.whn-icon::before{
  background-image: url('/img/icons/sidebar/whn.svg');
}

.team-icon::before{
  background-image: url('/img/icons/sidebar/team.svg');
}

.infra-icon::before{
  background-image: url('/img/icons/sidebar/infra.svg');
}

.admin-icon::before{
  background-image: url('/img/icons/sidebar/admin.svg');
}

.template-icon::before{
  background-image: url('/img/icons/sidebar/template.svg');
}

